tests/NormalTests/paczka1/small_fuzzy/72610752.err
Error in line 4: 0VkKjOCzm A337 40,5
Error in line 15: S1 A38 95,5
